texts v1.1 and fixed shadow on mobile

--- a/css/animations.css
+++ b/css/animations.css
@@ -823,7 +823,8 @@ body {
     }
 
     .feature-description .content p {
-        font-size: 14px;
+        font-size: 16px;
+        line-height: 1.5;
     }
 
     .feature-description .header {
@@ -861,5 +862,12 @@ body {
     }
     100% {
         opacity: 0;
+    }
+}
+
+@media screen and (max-width: 756px) {
+    .shadow {
+        height: 50px;
+        width: 60vw;
     }
 }
